# python-asyncio-university

./: .gitignore  README.md  requirements.txt
classworks/classwork_1/: task1.py  task2.py  task3.py
classworks/classwork_2/: 1.txt  2.txt  task1.py  task2.py  task3.py
classworks/classwork_3/: config.py  exceptions.py  main.py  routes.py  views.py
classworks/classwork_4/: create_tables.sql  delete.sql  insert.sql  (+3 more)
final_project/: README.md  pyproject.toml  runserver.py
final_project/app/: __init__.py  config.py  context.py  enums.py  exceptions.py  mailing.py  middlewares.py  routes.py  uploads.py
final_project/app/auth/: authorization.py  enums.py  exceptions.py  permissions.py
final_project/app/db/: __init__.py  models.py  queries.py
final_project/app/db/mock/: create_entities.py
final_project/app/templates/: events.html
final_project/app/templates/auth/: change_password.html  forgot_password_form.html  forgot_password_request.html  login.html  register.html
final_project/app/templates/emails/: password_reset.html
final_project/app/utils/: custom_fields.py  utils.py  validation.py
final_project/app/utils/password/: hash.py
final_project/app/views/: discussions.py  uploads.py  users.py
final_project/migrations/: env.py  script.py.mako
final_project/migrations/versions/: 2415f2bbc120_add_users_table.py  379b3b08c05d_add_discussion_comment_and_upload_tables.py  5a02b7d10c2a_add_phone_number_to_users_table.py  9404b11af02f_add_passwords_reset_link_table.py  a5648868b26a_add_superuser_admin.py  f9e2871666eb_replied_message_id_can_be_null.py
(+26 files in other folders)
